--- a/Cartola/nbproject/private/private.properties
+++ b/Cartola/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\eric\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Pedrug\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
